# oracle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
opt/: CMakeLists.txt
oracle_core/: CMakeLists.txt
oracle_core/include/core/env/: env.hpp
oracle_core/include/core/fswatch/: fswatch.hpp
oracle_core/include/core/logging/: logging.hpp
oracle_core/include/core/player/: backend.hpp  opendota_api_backend.hpp  player.hpp
oracle_core/include/core/srvlog/: srvlog.hpp
oracle_core/src/core/env/: env.cpp
oracle_core/src/core/logging/: logging.cpp
oracle_core/src/core/player/: backend.cpp  opendota_api_backend.cpp  player.cpp
oracle_core/src/core/srvlog/: srvlog.cpp
oracle_core/src/fswatch/: fswatch.cpp
oracle_core/src/srvlog/: srvlog.cpp
oracle_overlay/: CMakeLists.txt
oracle_overlay/include/overlay/: overlay.hpp
oracle_overlay/src/overlay/: interface.cpp  interface.h  overlay.cpp
src/: main.cpp
tests/: tests.cpp
